--- a/PersonalFinancialReports/App.config
+++ b/PersonalFinancialReports/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+<appSettings>
+  <add key="ReleaseMode" value="false"/>
+  <add key="CSVFolder" value="CsvFolder"/>
+</appSettings>
 </configuration>
