--- a/PersonalFinancialReports/PersonalFinancialReports.csproj
+++ b/PersonalFinancialReports/PersonalFinancialReports.csproj
@@ -49,6 +49,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BusinessLogicLayer\BusinessLogicLayer.csproj">
+      <Project>{9ed7a5da-98e8-47de-8d3c-48eda4264e60}</Project>
+      <Name>BusinessLogicLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Models\Models.csproj">
       <Project>{A959397C-0F0E-478C-9F2C-CFAD771F6A6C}</Project>
       <Name>Models</Name>
