--- a/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CsvMapper.cs" />
     <Compile Include="CsvReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
