--- a/BusinessLogicLayer.Test/BusinessLogicLayer.Test.csproj
+++ b/BusinessLogicLayer.Test/BusinessLogicLayer.Test.csproj
@@ -45,10 +45,11 @@
       <HintPath>..\packages\MSTest.TestFramework.1.1.18\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvMapper..cs" />
+    <Compile Include="CsvMapper.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
